@@ -1,6 +1,11 @@
 # ChangeLog file for monetdb-java
 # This file is updated with Maddlog
 
+* Thu Jan 19 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
+- Corrected DatabaseMetaData.getUDTs() output. It used to return rows
+  for system types: inet, json, url and uuid. However those are not User
+  Defined Types. Now they are no longer returned by this method.
+
 * Thu Dec  8 2022 Joeri van Ruth <joeri.van.ruth@monetdbsolutions.com>
 - Internal method waitForPrompt() of class BufferedMCLReader has been
   renamed to discardRemainder(). The example program SQLcopyinto.java
